--- a/app/src/main/res/layout/activity_ejemplos_fragment.xml
+++ b/app/src/main/res/layout/activity_ejemplos_fragment.xml
@@ -7,25 +7,33 @@
     tools:context=".EjemplosFragment">
 
     <Button
-        android:onClick="ejemplo1"
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="157dp"
+        android:onClick="ejemplo1"
         android:text="Ejemplo1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:onClick="ejemplo2"
         android:id="@+id/button2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="3dp"
-        android:layout_marginLeft="3dp"
         android:layout_marginTop="58dp"
+        android:onClick="ejemplo2"
         android:text="Ejemplo2"
         app:layout_constraintStart_toStartOf="@+id/button"
         app:layout_constraintTop_toBottomOf="@+id/button" />
+
+    <Button
+        android:onClick="ejemplo3"
+        android:id="@+id/button3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="49dp"
+        android:text="Ejemplo3"
+        app:layout_constraintStart_toStartOf="@+id/button2"
+        app:layout_constraintTop_toBottomOf="@+id/button2" />
 </androidx.constraintlayout.widget.ConstraintLayout>
